# docs/openapi.yaml
@@ -2831,6 +2831,12 @@ paths:
           schema:
             type: string
             format: uuid
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/WorkOrderCompleteRequest"
       responses:
         "200":
           description: OK
@@ -2846,6 +2852,12 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
         "401":
           description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "403":
+          description: Forbidden
           content:
             application/json:
               schema:
@@ -2868,6 +2880,18 @@ paths:
           schema:
             type: string
             format: uuid
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                checklistResults:
+                  type: array
+                  items:
+                    $ref: "#/components/schemas/WorkOrderChecklistResult"
+              additionalProperties: false
       responses:
         "200":
           description: OK
